--- a/Evaluacion_de_requisitos/requisitos.html
+++ b/Evaluacion_de_requisitos/requisitos.html
@@ -10,10 +10,10 @@
 <body class="fondo">
     <center>
         <h1> informe de evaluacion de requisitos</h1>
-       <img src="./img/1678482681384 (1).jpg" alt="">
-
-
-
+       <img class="tamaño" src="./img/1678482681384 (1).jpg">
+       <li><a href="comentarios.html">comentarios</a></li>
+       <li><a href="cliente.html">cliente</a></li>
+       <li><a href="oferente.html">oferente</a></li>
 
     </center>
 </body>
