--- a/Evidencias.html
+++ b/Evidencias.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Jorge Enrique</title>
-  <link rel="stylesheet" href="<link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="stylesheet" href="link rel="preconnect href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Prata&display=swap" rel="stylesheet">">
   <link rel="stylesheet" href="Evidencias1.css">
@@ -13,14 +13,14 @@
 <body>
   <div><center><h1 style="color: rgb(175, 175, 175);">portfolio</h1></center>
     <div>
-   <center> <li><img src="https://lh3.googleusercontent.com/a/AGNmyxakrWZ81hyJviawPL1e-bDT8nQFRPyry3eeGlxPKQ=s288" alt=""></li> </center>
-   <div> 
-    <li><a href="fuentes_3/DISNEY/3.html" style="color: rgb(175, 175, 175);" class="box box1">DISNEY</a></li>
-    <li><a href="fuentes_3/GAME OF THRONES/2.html" style="color: rgb(175, 175, 175);" class="box box2">GAME OF THRONES</a></li>
-    <li><a href="fuentes_3/NETFLIX/1.html" style="color: rgb(175, 175, 175);" class="box box3">NETFLIX</a></li>
-    <li><a href="colores/color.html" style="color: rgb(175, 175, 175);" class="box box4">COLORES</a></li>
-    <li><a href="listas/listas.html" style="color: rgb(175, 175, 175);" class="box box5">LISTAS</a></li>
-    </div>
+   <center> <li class="punto"><img src="https://lh3.googleusercontent.com/a/AGNmyxakrWZ81hyJviawPL1e-bDT8nQFRPyry3eeGlxPKQ=s288"></li> </center>
+   <div><center> 
+    <button class="button1" :active ><li><a href="fuentes_3/DISNEY/3.html" style="color: rgb(175, 175, 175);" class="raya">DISNEY</a></li></button>
+    <button class="button1" :active ><li><a href="fuentes_3/GAME OF THRONES/2.html" style="color: rgb(175, 175, 175);" class="raya">GAME OF THRONES</a></li></button>
+    <button class="button1" :active ><li><a href="fuentes_3/NETFLIX/1.html" style="color: rgb(175, 175, 175);" class="raya">NETFLIX</a></li></button>
+    <button class="button1" :active ><li><a href="colores/color.html" style="color: rgb(175, 175, 175);"class="raya" >COLORES</a></li></button>
+    <button class="button1" :active ><li><a href="listas/listas.html" style="color: rgb(175, 175, 175);"class="raya" >LISTAS</a></li></button>
+  </center></div>
   </div>
   </div>
 </body>
