--- a/Evaluacion_de_requisitos/comentarios.html
+++ b/Evaluacion_de_requisitos/comentarios.html
@@ -8,7 +8,7 @@
     <title>COMENTARIOS</title>
 </head>
 <body class="fondo">
-    <button class="button1"><li><a href="requisitos.html" class="raya">ATRAS</a></li></button>
+    <button class="button1"><li><a href="requisitos.html" class="raya" style="color: #800000;">ATRAS</a></li></button>
     <center><h1>COMENTARIOS</h1></center>
 
 
