--- a/Evaluacion_de_requisitos/oferente.html
+++ b/Evaluacion_de_requisitos/oferente.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="oferente.css">
 </head>
 <body class="fondo">
-    <button class="button1"><li><a href="requisitos.html" class="raya">ATRAS</a></li></button>
+    <button class="button1"><li><a href="requisitos.html" class="raya" style="color: #800000;">ATRAS</a></li></button>
     <center><h1>OFERENTE</h1></center>
 
 
