--- a/Evaluacion_de_requisitos/requisitos.html
+++ b/Evaluacion_de_requisitos/requisitos.html
@@ -10,7 +10,7 @@
 <body class="fondo">
     <center><h1> Informe de Evaluacion de Requisitos</h1></center>
     <center>
-    <div>
+    <div class="letra-color">
     <img class="tamaño" src="./img/1678590908442.jpg">
     <img class="tamaño" src="./img/IMG-20230311-WA0061.jpg">
     <h1>Autores:</h1>
@@ -21,22 +21,23 @@
     <p>misma localidad, y con ello, tecnico en Sistemas y técnico en reparación de  </p>
     <p>celulares En éstos momentos está en proceso culminar el tecnologo en Programación</p> 
     <h3>biografia de Jorge Enrique Nuñez Molina</h3>
-    <p>Fecha de nacimiento el 4 de abril del 2005, nací en Pitalito-Huila, donde actualmente estoy viviendo,</p>
-    <p> mis padres son Carmen Rosa Molina Castiblanco y Nelson Enrique Nuñez, tengo una hermana menor de 11 </p>
-<p>años Dulyani Nuñez Molina. Mi primaria la realice en el Liceo Andaqui, pero culmine mi secundaria junto </p>
-<p>con mi grado 11 en la Institución Educativa Montessori, donde también realice un técnico en sistemas que</p>
-<p> otorgo el Sena en la institución, actualmente estoy realizando un Tecnólogo en Análisis y Desarrollo de </p>
-<p>Software en el Sena. Participe en juegos nacionales de ajedrez en Cali, fui campeón departamental 2 años </p>
-<p>seguidos, represente a mi institución educativa en los juegos intercolegiados, en los cuales pase la fase </p>
-<p> municipal, departamental y llegue hasta la fase Regional nacional en la cual fui eliminado de las finales.</p>
+    <p>Fecha de nacimiento el 4 de abril del 2005, nací en Pitalito-Huila, donde actualmente </p>
+    <p>estoy viviendo, mis padres son Carmen Rosa Molina Castiblanco y Nelson Enrique Nuñez,  </p>
+    <p>tengo una hermana menor de 11años Dulyani Nuñez Molina. Mi primaria la realice en el  </p>
+    <p>Liceo Andaqui, pero culmine mi secundaria juntocon mi grado 11 en la Institución Educativa</p>
+    <p> Montessori, donde también realice un técnico en sistemas que otorgo el Sena en la institución, </p>
+    <p> actualmente estoy realizando un Tecnólogo en Análisis y Desarrollo de Software en el Sena. </p>
+    <p> Participe en juegos nacionales de ajedrez en Cali, fui campeón departamental 2 años seguidos, </p>
+    <p>represente a mi institución educativa en los juegos intercolegiados, en los cuales pase la fase</p>
+    <p> municipal, departamental y llegue hasta la fase Regional nacional en la cual fui eliminado de las finales.</p>
 
 
     </center>
     </div>
     <center>
-       <button class="button1"><li><a href="comentarios.html" class="raya">comentarios</a></li></button>
-       <button class="button1"><li><a href="cliente.html" class="raya">cliente</a></li></button>
-       <button class="button1"><li><a href="oferente.html" class="raya">oferente</a></li></button>
+       <button class="button1"><li><a href="comentarios.html" class="raya" style="color: #800000;">comentarios</a></li></button>
+       <button class="button1"><li><a href="cliente.html" class="raya" style="color: #800000;">cliente</a></li></button>
+       <button class="button1"><li><a href="oferente.html" class="raya" style="color: #800000;">oferente</a></li></button>
     </center>
 </body>
 </html> 
