--- a/Evidencias.html
+++ b/Evidencias.html
@@ -21,6 +21,7 @@
     <button class="button1" :active ><li><a href="colores/color.html" style="color: rgb(175, 175, 175);"class="raya" >COLORES</a></li></button>
     <button class="button1" :active ><li><a href="listas/listas.html" style="color: rgb(175, 175, 175);"class="raya" >LISTAS</a></li></button>
     <button class="button1" :active ><li><a href="Evaluacion_de_requisitos/requisitos.html" style="color: rgb(175, 175, 175);"class="raya" >Evaluacion_de_requisitos</a></li></button>
+    <button class="button1" :active ><li><a href="margin/margin.html" style="color: rgb(175, 175, 175);"class="raya" >margen y borde</a></li></button>
   </center></div>
   </div>
   </div>
