--- a/Evaluacion_de_requisitos/requisitos.html
+++ b/Evaluacion_de_requisitos/requisitos.html
@@ -35,9 +35,11 @@
     </center>
     </div>
     <center>
+       <button class="button1"><li><a href="introduccion.htm" class="raya" style="color: #800000;">introduccion</a></li></button>
        <button class="button1"><li><a href="comentarios.html" class="raya" style="color: #800000;">comentarios</a></li></button>
        <button class="button1"><li><a href="cliente.html" class="raya" style="color: #800000;">cliente</a></li></button>
        <button class="button1"><li><a href="oferente.html" class="raya" style="color: #800000;">oferente</a></li></button>
+      
     </center>
 </body>
 </html> 
