--- a/margin/margin.html
+++ b/margin/margin.html
@@ -10,10 +10,10 @@
 <body class="body">
     <center><h1>Margin borders y padding</h1></center>
     <center>
-    <div class="box-style box-1">Linea</div>
-    <div class="box-style box-2">rayas</div>
-    <div class="box-style box-3">puntos</div>
-    <div class="box-style box-4">doble linea</div>
+    <div class="box-style box-1">LINEA Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eum totam corrupti unde numquam? Animi consequuntur aperiam iste. Sunt maiores, sed tenetur magni cum natus, laborum omnis obcaecati officia officiis accusantium!</div>
+    <div class="box-style box-2">RAYAS Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nihil fugiat quaerat expedita tempore hic, laboriosam dignissimos, modi impedit eius possimus ipsa, iste assumenda quod aspernatur. Veniam nesciunt quasi consequatur repellendus!</div>
+    <div class="box-style box-3">PUNTOS Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vero placeat animi exercitationem sed facere deserunt fuga corrupti, numquam debitis soluta quo minima delectus totam! Cum dolores voluptatum voluptas quasi ad!</div>
+    <div class="box-style box-4">DOBLE LINEA Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto nemo, aut quos voluptatum ab illum consectetur labore, assumenda nostrum corrupti eaque cupiditate facilis eos perferendis, adipisci pariatur? Est, magni pariatur.</div>
 
 
 
