--- a/Evaluacion_de_requisitos/requisitos.html
+++ b/Evaluacion_de_requisitos/requisitos.html
@@ -36,10 +36,10 @@
     </div>
     <center>
        <button class="button1"><li><a href="introduccion.htm" class="raya" style="color: #800000;">introduccion</a></li></button>
-       <button class="button1"><li><a href="comentarios.html" class="raya" style="color: #800000;">comentarios</a></li></button>
-       <button class="button1"><li><a href="cliente.html" class="raya" style="color: #800000;">cliente</a></li></button>
-       <button class="button1"><li><a href="oferente.html" class="raya" style="color: #800000;">oferente</a></li></button>
-      
+       <button class="button1"><li><a href="Noticias.html" class="raya" style="color: #800000;">Noticias</a></li></button>
+       <button class="button1"><li><a href="Ubicacion.html" class="raya" style="color: #800000;">Ubicacion</a></li></button>
+       <button class="button1"><li><a href="Pujas.html" class="raya" style="color: #800000;">Puja</a></li></button>
+       <button class="button1"><li><a href="como-comprar.html" class="raya" style="color: #800000;">Como comprar</a></li></button>
     </center>
 </body>
 </html> 
