--- a/Evaluacion_de_requisitos/Noticias.html
+++ b/Evaluacion_de_requisitos/Noticias.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="comentarios.css">
-    <title>COMENTARIOS</title>
+    <link rel="stylesheet" href="Noticias.css">
+    <title>Noticias</title>
 </head>
 <body class="fondo">
     <button class="button1"><li><a href="requisitos.html" class="raya" style="color: #800000;">ATRAS</a></li></button>
-    <center><h1>COMENTARIOS</h1></center>
-
+    <center><h1>Noticias</h1></center>
+<center><img src="./img/Noticia.png" alt=""></center>
 
 
 
