--- a/Evaluacion_de_requisitos/Ubicacion.html
+++ b/Evaluacion_de_requisitos/Ubicacion.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="cliente.css">
-    <title>CLIENTE</title>
+    <link rel="stylesheet" href="Ubicacion.css">
+    <title>Ubicacion</title>
 </head>
 <body class="fondo">
     <button class="button1"><li><a href="requisitos.html" class="raya" style="color: #800000;">ATRAS</a></li></button>
-    <center><h1>CLIENTE</h1></center>
-
+    <center><h1>Ubicacion</h1></center>
+    <center><img src="./img/Ubicacion.png" alt=""></center>
 
 
 
