--- a/Evaluacion_de_requisitos/como-comprar.html
+++ b/Evaluacion_de_requisitos/como-comprar.html
@@ -4,15 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>OFERENTE</title>
-    <link rel="stylesheet" href="oferente.css">
+    <link rel="stylesheet" href="como-comprar.css">
+    <title>Como comprar</title>
 </head>
 <body class="fondo">
     <button class="button1"><li><a href="requisitos.html" class="raya" style="color: #800000;">ATRAS</a></li></button>
-    <center><h1>OFERENTE</h1></center>
-
-
-
-
+    <center><h1>Como comprar</h1></center>
+    <center><img src="./img/como comprar.png" alt=""></center>
 </body>
 </html>
