--- a/Evaluacion_de_requisitos/introduccion.htm
+++ b/Evaluacion_de_requisitos/introduccion.htm
@@ -10,6 +10,8 @@
 <body class="fondo">
     <button class="button1"><li><a href="requisitos.html" class="raya" style="color: #800000;">ATRAS</a></li></button>
     <center><h1>introduccion</h1></center>
-    
+    <div class="box">  <center><div class="box-style">Los mockups de subasta de café son diseños visuales que muestran cómo podría ser una plataforma en línea para la compra y venta de granos de café. Permiten a los diseñadores y desarrolladores visualizar la plataforma antes de construirla y asegurarse de que sea fácil de usar y eficiente para los usuarios. Los mockups ofrecen una vista previa de cómo los usuarios pueden navegar y explorar diferentes opciones de café, hacer ofertas y realizar seguimiento de las transacciones.
+        Mostrar texto citado</div></center></div>
+  
 </body>
 </html>
