--- a/Evaluacion_de_requisitos/requisitos.html
+++ b/Evaluacion_de_requisitos/requisitos.html
@@ -14,22 +14,13 @@
     <img class="tamaño" src="./img/1678590908442.jpg">
     <img class="tamaño" src="./img/IMG-20230311-WA0061.jpg">
     <h1>Autores:</h1>
-    <h2>Jorge Enrique Nuñez Molina y James Alfaro Muñoz Bolaños</h2>  
-    <h3>biografia de James Alfaro Muñoz Bolaños</h3>
-    <p>nació en 24 de marzo del 2006 en el municipio de Saladoblanco Huila. </p> 
-    <p>Culminó sus estudios de Bachiller en el colegio Misael Pastrana Borrero de la</p>
-    <p>misma localidad, y con ello, tecnico en Sistemas y técnico en reparación de  </p>
-    <p>celulares En éstos momentos está en proceso culminar el tecnologo en Programación</p> 
-    <h3>biografia de Jorge Enrique Nuñez Molina</h3>
-    <p>Fecha de nacimiento el 4 de abril del 2005, nací en Pitalito-Huila, donde actualmente </p>
-    <p>estoy viviendo, mis padres son Carmen Rosa Molina Castiblanco y Nelson Enrique Nuñez,  </p>
-    <p>tengo una hermana menor de 11años Dulyani Nuñez Molina. Mi primaria la realice en el  </p>
-    <p>Liceo Andaqui, pero culmine mi secundaria juntocon mi grado 11 en la Institución Educativa</p>
-    <p> Montessori, donde también realice un técnico en sistemas que otorgo el Sena en la institución, </p>
-    <p> actualmente estoy realizando un Tecnólogo en Análisis y Desarrollo de Software en el Sena. </p>
-    <p> Participe en juegos nacionales de ajedrez en Cali, fui campeón departamental 2 años seguidos, </p>
-    <p>represente a mi institución educativa en los juegos intercolegiados, en los cuales pase la fase</p>
-    <p> municipal, departamental y llegue hasta la fase Regional nacional en la cual fui eliminado de las finales.</p>
+    <h2>Jorge Enrique Nuñez Molina y James Alfaro Muñoz Bolaños</h2>
+    <div class="contenedor-padre">
+     <div class="box-style box-1">Fecha de nacimiento el 4 de abril del 2005, nací en Pitalito-Huila, donde actualmente estoy viviendo, mis padres son Carmen Rosa Molina Castiblanco y Nelson Enrique Nuñez,tengo una hermana menor de 11años Dulyani Nuñez Molina. Mi primaria la realice en el Liceo Andaqui, pero culmine mi secundaria juntocon mi grado 11 en la Institución Educativa Montessori, donde también realice un técnico en sistemas que otorgo el Sena en la institución,actualmente estoy realizando un Tecnólogo en Análisis y Desarrollo de Software en el Sena.Participe en juegos nacionales de ajedrez en Cali, fui campeón departamental 2 años seguidos,represente a mi institución educativa en los juegos intercolegiados, en los cuales pase la fase municipal, departamental y llegue hasta la fase Regional nacional en la cual fui eliminado de las finales.</div>
+     <div class="box-style box-2">James Alfaro Muñoz Bolaños, nació en 24 de marzo del 2006 en el municipio de Saladoblanco Huila. Culminó sus estudios de Bachiller en el colegio Misael Pastrana Borrero de la misma localidad, y con ello, tecnico en Sistemas y técnico en reparación de celulares
+        En éstos momentos está en proceso culminar el tecnologo en Programación..</div>
+    </div>
+    
 
     </center>
     </div>
