--- a/Evidencias.html
+++ b/Evidencias.html
@@ -4,7 +4,11 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Jorge Enrique</title>
+  
+  <head>
+    <title>Jorge Enrique</title>
+    <link rel="shortcut icon" href="./consola-de-juego.png" type="image/x-icon">
+  </head>
   <link rel="stylesheet" href="link rel="preconnect href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Prata&display=swap" rel="stylesheet">">
