--- a/catalogo.html
+++ b/catalogo.html
@@ -4,34 +4,34 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="catalogo.css">
+    <link rel="stylesheet" href="./css/catalogo.css">
     <title>Catalogo</title>
 </head>
 <body>
     <div class="aling">      
         <h1>Catalogo</h1>
         <div class="producto-box">
-         <img  src="./img/telefon 1.jpg">
+         <img  src="./css/img-catalogo/telefon 1.jpg">
          <label class="producto">vivo1</label>
          <label class="precio">1.000.000</label>
         </div>
         <div class="producto-box">
-         <img  src="./img/telefono 2.jpg">
+         <img  src="./css/img-catalogo/telefono 2.jpg">
          <label class="producto">vivo 2</label>
          <label class="precio">1.000.000</label>
         </div>
         <div class="producto-box">
-         <img  src="./img/telefono 3.jpg">
+         <img  src="./css/img-catalogo/telefono 3.jpg">
          <label class="producto">vivo 3</label>
          <label class="precio">1.000.000</label>
         </div>
         <div class="producto-box">
-         <img  src="./img/telefono 4.jpg">
+         <img  src="./css/img-catalogo/telefono 4.jpg">
          <label class="producto">vivo 4</label>
          <label class="precio">1.000.000</label>
         </div>
         <div class="producto-box">
-         <img  src="./img/telefono 5.jpg">
+         <img  src="./css/img-catalogo/telefono 5.jpg">
          <label class="producto">vivo 5</label>
          <label class="precio">1.000.000</label>
         </div>
