--- a/margin.html
+++ b/margin.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Margin borders y padding</title>
-    <link rel="stylesheet" href="margin.css">
+    <link rel="stylesheet" href="./css/margin.css">
 </head>
 <body class="body">
     <center><h1>Margin borders y padding</h1></center>
