--- a/Disney.html
+++ b/Disney.html
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Disney</title>
-    <link rel="stylesheet" href="Disney.css">
+    <link rel="stylesheet" href="./css/Disney.css">
     <link rel="stylesheet" media="screen" href="https://fontlibrary.org//face/waltograph-disney" type="text/css"/>
 </head>
  <body class="simple-linear">
     <center class="tam"> 
         <div>
-          <center><h1 style="color: rgb(253, 250, 250);">Disney</h1></center>
+          <center><h1>Disney</h1></center>
         </div>
     </center>
  </body>
