--- a/tabla.html
+++ b/tabla.html
@@ -29,7 +29,7 @@
         <tr> 
             <td class="azul">no aplica</td>
             <td class="azul">Animal Planet</td>
-            <td class="gris">si</td>
+            <td class="gris"><img src="css/img-tabla/Sin título.png"></td>
             <td class="gris"><img src="css/img-tabla/R.png"></td>
             <td class="gris"><img src="css/img-tabla/Sin título.png"></td>
             <td class="gris"><img src="css/img-tabla/Sin título.png"></td>
@@ -37,10 +37,10 @@
         <tr>
             <td rowspan="3" class="azul">HBO</td>
             <td class="azul">HBO family</td>
-            <td class="gris">si</td>
-            <td class="gris">no</td>
-            <td class="gris">si</td>
-            <td class="gris">no</td>
+            <td class="gris"><img src="css/img-tabla/Sin título.png"></td>
+            <td class="gris"><img src="css/img-tabla/R.png"></td>
+            <td class="gris"><img src="css/img-tabla/Sin título.png"></td>
+            <td class="gris"><img src="css/img-tabla/R.png"></td>
         </tr>
         <tr>
             <td class="azul">HBO Classic</td>
