--- a/Disney.html
+++ b/Disney.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./css/Disney.css">
     <link rel="stylesheet" media="screen" href="https://fontlibrary.org//face/waltograph-disney" type="text/css"/>
 </head>
+<link rel="shortcut icon" href="./css/img-Index/consola-de-juego.png" type="image/x-icon">
  <body class="simple-linear">
     <center class="tam"> 
         <div>
