--- a/NETFLIX.html
+++ b/NETFLIX.html
@@ -10,6 +10,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
 <head>
+    <link rel="shortcut icon" href="./css/img-Index/consola-de-juego.png" type="image/x-icon">
 <body>
     <center class="tam"><div>
     <h1 style="color: rgb(238, 18, 18);">NETFLIX</h1>
