--- a/catalogo.html
+++ b/catalogo.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./css/catalogo.css">
     <title>Catalogo</title>
 </head>
+<link rel="shortcut icon" href="./css/img-Index/consola-de-juego.png" type="image/x-icon">
 <body>
     <div class="aling">      
         <h1>Catalogo</h1>
