--- a/color.html
+++ b/color.html
@@ -7,6 +7,7 @@
     <title>COLORES</title>
     <link rel="stylesheet" href="./css/color.css">
 </head>
+<link rel="shortcut icon" href="./css/img-Index/consola-de-juego.png" type="image/x-icon">
 <body>
 
    <center><h1>colores</h1><center>
