--- a/formulario.html
+++ b/formulario.html
@@ -8,6 +8,7 @@
     <script src="./jc/formulario.js"></script>
     <title>formulario</title>
 </head>
+<link rel="shortcut icon" href="./css/img-Index/consola-de-juego.png" type="image/x-icon">
 <body>
     <h1>FORMULARIO DE FUCHA TECNICA</h1>
     <h2>Caracteristicas del producto</h2>
