--- a/margin.html
+++ b/margin.html
@@ -7,6 +7,7 @@
     <title>Margin borders y padding</title>
     <link rel="stylesheet" href="./css/margin.css">
 </head>
+<link rel="shortcut icon" href="./css/img-Index/consola-de-juego.png" type="image/x-icon">
 <body class="body">
     <center><h1>Margin borders y padding</h1></center>
     <center>
