--- a/Evaluacion_de_requisitos/Noticias.html
+++ b/Evaluacion_de_requisitos/Noticias.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="Noticias.css">
     <title>Noticias</title>
 </head>
+<link rel="shortcut icon" href="../css/img-Index/consola-de-juego.png" type="image/x-icon">
 <body class="fondo">
     <button class="button1"><li><a href="requisitos.html" class="raya" style="color: #800000;">ATRAS</a></li></button>
     <center><h1>Noticias</h1></center>
