--- a/Evaluacion_de_requisitos/Pujas.html
+++ b/Evaluacion_de_requisitos/Pujas.html
@@ -7,6 +7,7 @@
     <title>Puja</title>
     <link rel="stylesheet" href="Pujas.css">
 </head>
+<link rel="shortcut icon" href="../css/img-Index/consola-de-juego.png" type="image/x-icon">
 <body class="fondo">
     <button class="button1"><li><a href="requisitos.html" class="raya" style="color: #800000;">ATRAS</a></li></button>
     <center><h1>Puja</h1></center>
