--- a/Evaluacion_de_requisitos/requisitos.html
+++ b/Evaluacion_de_requisitos/requisitos.html
@@ -7,6 +7,7 @@
     <title>informe de evaluacion de requisitos</title>
     <link rel="stylesheet" href="requisitos.css">
 </head>
+<link rel="shortcut icon" href="../css/img-Index/consola-de-juego.png" type="image/x-icon">
 <body class="fondo">
     <center><h1> Informe de Evaluacion de Requisitos</h1></center>
     <center>
