--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         <button class="button1" :active ><li><a href="margin.html" class="raya" >margen y borde</a></li></button>
         <button class="button1" :active ><li><a href="formulario.html" class="raya" >formulario</a></li></button>
         <button class="button1" :active ><li><a href="catalogo.html" class="raya" >catalogo</a></li></button>
+        <button class="button1" :active ><li><a href="formulario-2.html" class="raya" >formulario-2</a></li></button>
         <button class="button1" :active ><li><a href="tabla.html" class="raya" >tabla</a></li></button>
       </center>
     </div>  
