--- a/listas.html
+++ b/listas.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <title>Document</title>
 </head>
+<link rel="shortcut icon" href="./css/img-Index/consola-de-juego.png" type="image/x-icon">
 <body>
     <h1>ciudaddes por conocer </h1>
     <h2>lista desordenada</h2>
