--- a/tabla.html
+++ b/tabla.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/tabla.css">
     <title>tabla</title>
 </head>
+<link rel="shortcut icon" href="./css/img-Index/consola-de-juego.png" type="image/x-icon">
 <body>
     <h1>programacion de celdas</h1>
     <div class="table_box">
