--- a/formulario.html
+++ b/formulario.html
@@ -10,8 +10,10 @@
 </head>
 <link rel="shortcut icon" href="./css/img-Index/consola-de-juego.png" type="image/x-icon">
 <body>
-    <h1>FORMULARIO DE FUCHA TECNICA</h1>
+ 
+ <h1>FORMULARIO DE FICHA TECNICA</h1>
     <h2>Caracteristicas del producto</h2>
+
     <p>
         <input type="text" id="nom-producto" placeholder="nombre del producto"> 
         <p id="res-producto"></p>
