--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
         <button class="button1" :active ><li><a href="catalogo.html" class="raya" >catalogo</a></li></button>
         <button class="button1" :active ><li><a href="formulario-2.html" class="raya" >formulario-2</a></li></button>
         <button class="button1" :active ><li><a href="tabla.html" class="raya" >tabla</a></li></button>
+        <button class="button1" :active ><li><a href="menu-icon.html" class="raya" >menu-icon</a></li></button>
       </center>
     </div>  
   </body>
