--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
         <button class="button1" :active ><li><a href="formulario-2.html" class="raya" >formulario-2</a></li></button>
         <button class="button1" :active ><li><a href="tabla.html" class="raya" >tabla</a></li></button>
         <button class="button1" :active ><li><a href="menu-icon.html" class="raya" >menu-icon</a></li></button>
+        <button class="button1" :active ><li><a href="Tienda-Molina.html" class="raya">factura</a></li></button>
+        <button class="button1" :active ><li><a href="./descuento-java-2/index.html" class="raya">descuento</a></li></button>
       </center>
     </div>  
   </body>
