--- a/menu-sena.html
+++ b/menu-sena.html
@@ -47,21 +47,21 @@
      <!-- vertical -->
         <nav class="vertical1">
           <ul class="vertical2">
-            <li  class="pulsor">Quienes somos</li>
-            <li  class="pulsor">Funciones y deberes</li>
-            <li  class="pulsor">Mision y vision</li>
-            <li  class="pulsor">Valores y compromisos institucionales</li>
-            <li  class="pulsor">estructura organizacional</li>
-            <li  class="pulsor">perfiles de los funcionarios directivos</li>
-            <li  class="pulsor">Prospectiva</li>
-            <li  class="pulsor">Familia SENA</li>
-            <li  class="pulsor">Manual de Funciones</li>
-            <li  class="pulsor">Directorio SENA</li>
-            <li  class="pulsor">regionales</li>
-            <li  class="pulsor">Internacionalizacion</li>
-            <li  class="pulsor">Planeacion estrategica</li>
-            <li  class="pulsor">sistema Integrado de Gestion</li>
-            <li  class="pulsor">Transformacion Digital</li>
+            <li  class="pulsor pulsor-1">Quienes somos</li>
+            <li  class="pulsor pulsor-2" >Funciones y deberes</li>
+            <li  class="pulsor pulsor-3">Mision y vision</li>
+            <li  class="pulsor pulsor-4">Valores y compromisos institucionales</li>
+            <li  class="pulsor pulsor-5">estructura organizacional</li>
+            <li  class="pulsor pulsor-6">perfiles de los funcionarios directivos</li>
+            <li  class="pulsor pulsor-7">Prospectiva</li>
+            <li  class="pulsor pulsor-8">Familia SENA</li>
+            <li  class="pulsor pulsor-9">Manual de Funciones</li>
+            <li  class="pulsor pulsor-10">Directorio SENA</li>
+            <li  class="pulsor pulsor-11">regionales</li>
+            <li  class="pulsor pulsor-12">Internacionalizacion</li>
+            <li  class="pulsor pulsor-13">Planeacion estrategica</li>
+            <li  class="pulsor pulsor-14" >sistema Integrado de Gestion</li>
+            <li  class="pulsor pulsor-15">Transformacion Digital</li>
           </ul>
         </nav>
     </div>
