--- a/localStorge.html
+++ b/localStorge.html
@@ -19,8 +19,8 @@
     <p>Apellido Almacenado: <c id="datoApellido"></c></p>
     <p>Fecha Almacenada: <c id="datoFecha"></c></p>
 
-    <p>
+    <a href="resultado.html" target="_blank" rel="noopen">
         <button onclick="cargarDatos()">Cargar Datos</button>
-    </p>
+    </a>
 </body>
 </html>
