--- a/menu-sena.html
+++ b/menu-sena.html
@@ -45,26 +45,23 @@
 
     <div class="vertical">
      <!-- vertical -->
-        <nav class="vertical1">
           <ul class="vertical2">
-            <li  class="pulsor pulsor-1">Quienes somos</li>
-            <hr>
-            <li  class="pulsor pulsor-2" >Funciones y deberes</li>
-            <li  class="pulsor pulsor-3">Mision y vision</li>
-            <li  class="pulsor pulsor-4">Valores y compromisos institucionales</li>
-            <li  class="pulsor pulsor-5">estructura organizacional</li>
-            <li  class="pulsor pulsor-6">perfiles de los funcionarios directivos</li>
-            <li  class="pulsor pulsor-7">Prospectiva</li>
-            <li  class="pulsor pulsor-8">Familia SENA</li>
-            <li  class="pulsor pulsor-9">Manual de Funciones</li>
-            <li  class="pulsor pulsor-10">Directorio SENA</li>
-            <li  class="pulsor pulsor-11">regionales</li>
-            <li  class="pulsor pulsor-12">Internacionalizacion</li>
-            <li  class="pulsor pulsor-13">Planeacion estrategica</li>
-            <li  class="pulsor pulsor-14" >sistema Integrado de Gestion</li>
-            <li  class="pulsor pulsor-15">Transformacion Digital</li>
+            <li  class="pulsor pulsor-1"><button>Quienes somos</button></li>
+            <li  class="pulsor pulsor-2" ><button>Funciones y deberes</button></li>
+            <li  class="pulsor pulsor-3"><button>Mision y vision</button></li>
+            <li  class="pulsor pulsor-4"><button>Valores y compromisos institucionales</button></li>
+            <li  class="pulsor pulsor-5"><button>estructura organizacional</button></li>
+            <li  class="pulsor pulsor-6"><button>perfiles de los funcionarios directivos</button></li>
+            <li  class="pulsor pulsor-7"><button>Prospectiva</button></li>
+            <li  class="pulsor pulsor-8"><button>Familia SENA</button></li>
+            <li  class="pulsor pulsor-9"><button>Manual de Funciones</button></li>
+            <li  class="pulsor pulsor-10"><button>Directorio SENA</button></li>
+            <li  class="pulsor pulsor-11"><button>regionales</button></li>
+            <li  class="pulsor pulsor-12"><button>Internacionalizacion</button></li>
+            <li  class="pulsor pulsor-13"><button>Planeacion estrategica</button></li>
+            <li  class="pulsor pulsor-14" ><button>sistema Integrado de Gestion</button></li>
+            <li  class="pulsor pulsor-15"><button>Transformacion Digital</button> </li>
           </ul>
-        </nav>
     </div>
    
 
