--- a/resultado.html
+++ b/resultado.html
@@ -4,12 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="./jc/formulario.js"></script>
+    <script src="./jc/localStorge.js"></script>
     <script src="jc/resultado.js"></script>
     <title>resultado</title>
 </head>
 <body>
     <h1>RESULTADO DE FICHA TECNICA</h1>
+    <p>Nombre Almacenado: <c id="datoNombre"></c></p>
+    <p>Apellido Almacenado: <c id="datoApellido"></c></p>
+    <p>Fecha Almacenada: <c id="datoFecha"></c></p>
+    
    <span></span>
 
 
