--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
 </head>
   <body> 
     <div><center><h1 style="color: rgb(175, 175, 175);">portfolio</h1></center><div>
-    <center> <li class="punto"><img src="https://lh3.googleusercontent.com/a/AGNmyxakrWZ81hyJviawPL1e-bDT8nQFRPyry3eeGlxPKQ=s288"></li> </center>
     <div>
       <center> 
         <button class="button1" :active ><li><a href="Disney.html" class="raya">DISNEY</a></li></button>
@@ -32,6 +31,7 @@
         <button class="button1" :active ><li><a href="tabla.html" class="raya" >tabla</a></li></button>
         <button class="button1" :active ><li><a href="menu-icon.html" class="raya" >menu-icon</a></li></button>
         <button class="button1" :active ><li><a href="Tienda-Molina.html" class="raya">factura</a></li></button>
+        <button class="button1" :active ><li><a href="./menu-sena.html" class="raya">menu sena</a></li></button>
         <button class="button1" :active ><li><a href="./descuento-java-2/index.html" class="raya">descuento</a></li></button>
       </center>
     </div>  
