--- a/formulario-2.html
+++ b/formulario-2.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/formulario-2.css">
+    <link defer rel="stylesheet" href="./css/formulario-2.css">
     <title>formulario-2</title>
 </head>
 <link rel="shortcut icon" href="./css/img-Index/consola-de-juego.png" type="image/x-icon">
