--- a/formulario.html
+++ b/formulario.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/formulario.css">
-    <script src="./jc/formulario.js"></script>
+    <script defer src="./jc/formulario.js"></script>
     <title>formulario</title>
 </head>
 <link rel="shortcut icon" href="./css/img-Index/consola-de-juego.png" type="image/x-icon">
