--- a/resultado.html
+++ b/resultado.html
@@ -1,11 +1,11 @@
-<!DOCTYPE html>
+|<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="./jc/localStorge.js"></script>
-    <script src="jc/resultado.js"></script>
+   <script defer src="./jc/localStorge.js"></script>
+    <script defer src="jc/resultado.js"></script>
     <title>resultado</title>
 </head>
 <body>
@@ -14,21 +14,7 @@
     <p>Apellido Almacenado: <c id="datoApellido"></c></p>
     <p>Fecha Almacenada: <c id="datoFecha"></c></p>
     
-   <span></span>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+   
 </body>
 </html>
+
