--- a/transition.html
+++ b/transition.html
@@ -9,5 +9,9 @@
 </head>
 <body>
     <div class="box-1"></div>
+    <div class="box-2"></div>
+    <div class="box-3"></div>
+    <div class="box-4"></div>
+    <div class="box-5"></div>
 </body>
 </html>
