--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
         <button class="button1" :active ><li><a href="menu-icon.html" class="raya" >menu-icon</a></li></button>
         <button class="button1" :active ><li><a href="Tienda-Molina.html" class="raya">factura</a></li></button>
         <button class="button1" :active ><li><a href="./menu-sena.html" class="raya">menu sena</a></li></button>
+        <button class="button1" :active ><li><a href="transition.html" class="raya">transition</a></li></button>
+        <button class="button1" :active ><li><a href="menu-horizontal.html" class="raya">menu desplegable </a></li></button>
         <button class="button1" :active ><li><a href="./descuento-java-2/index.html" class="raya">descuento</a></li></button>
       </center>
     </div>  
