--- a/menu-item.html
+++ b/menu-item.html
@@ -13,19 +13,18 @@
             <li class="first-item"><a href="#">Inicio </a></li>
             <li><a href="#">Nuestra Empresa</a>
                 <ul >
-                    <li><a href="#"> cauca</a></li>
-                    <li><a href="#">caqueta</a></li>
-                    <li><a href="#">neiva</a></li>
-                    <li><a href="#">huila</a>
+                    <li><a href="#">Cauca</a></li>
+                    <li><a href="#">Caqueta</a></li>
+                    <li><a href="#">Huila</a>
                         <ul>
                             <li><a href="#">Neiva</a></li>
-                            <li><a href="#">pitalito</a></li>
+                            <li><a href="#">Pitalito</a></li>
                             <li><a href="#">Garzon</a></li>
-                            <li><a href="#">la Plata</a></li>
+                            <li><a href="#">La Plata</a></li>
                         </ul>
                     </li>
-                    <li><a href="#">tolima</a></li>
-                    <li><a href="#">pereira</a></li>
+                    <li><a href="#">Tolima</a></li>
+                    <li><a href="#">Pereira</a></li>
                 </ul>
             </li>
             <li><a href="#">Productos</a></li>
