--- a/toglee.html
+++ b/toglee.html
@@ -8,6 +8,26 @@
     <title>Toglee</title>
 </head>
 <body>
-    
+    <div id="padre-box" class="padre">
+        <span class="tex-on-off tex-on">ON</span>
+        <span class="tex-on-off text-off">OFF</span>
+        <div id="hijo-box" class="hijo">
+
+        </div>
+    </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+    <script src="jc/toglee.js"></script>
 </body>
 </html>
