--- a/toglee.html
+++ b/toglee.html
@@ -8,14 +8,11 @@
     <title>Toglee</title>
 </head>
 <body>
-    <div id="padre-box" class="padre">
-        <span class="tex-on-off tex-on">ON</span>
-        <span class="tex-on-off text-off">OFF</span>
-        <div id="hijo-box" class="hijo">
-
-        </div>
-    </div>
-
+    <div id="contenedorPrincipal" class="contenedor1-off">
+    <span class="text-on-off text-on">ON</span>
+    <span class="text-on-off text-off">OFF</span>
+    <div id="contenedorScundario" class="contenedor2-off"></div>
+</div>
 
 
 
