--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
         <button class="button1" :active ><li><a href="./descuento-java-2/index.html" class="raya">descuento</a></li></button>
         <button class="button1" :active ><li><a href="menu-item.html" class="raya">menu item</a></li></button>
         <button class="button1" :active ><li><a href="toglee.html" class="raya">toggle</a></li></button>
+        <button class="button1" :active ><li><a href="flex-box.html" class="raya">flex-box</a></li></button>
       </center>
     </div>  
   </body>
