--- a/flex-box.html
+++ b/flex-box.html
@@ -7,21 +7,49 @@
     <title>flex-box</title>
 </head>
 <body>
+    <h3>flex-box: columna </h3>
+        <div class="box box-2">
+            <div class="box-gen "></div>
+            <div class="box-gen "></div>
+            <div class="box-gen "></div>
+        </div>
     <h3>flex-box: row</h3>
     <div class="box box-1">
         <div class="box-gen "></div>
         <div class="box-gen "></div>
         <div class="box-gen "></div>
-    </div>1
+    </div>
 
-    <h3>flex-box: columna </h3>
-    <div class="box box-2">
+    <h3>flex-box: column-reverse</h3>
+    <div class="box box-3">
         <div class="box-gen "></div>
         <div class="box-gen "></div>
         <div class="box-gen "></div>
-    </div>1
-
-
+    </div>
+    <h3>flex-box: row-reverse</h3>
+    <div class="box box-4">
+        <div class="box-gen "></div>
+        <div class="box-gen "></div>
+        <div class="box-gen "></div>
+    </div>
+    <h3>flex-box: inherit</h3>
+    <div class="box box-5">
+        <div class="box-gen "></div>
+        <div class="box-gen "></div>
+        <div class="box-gen "></div>
+    </div>
+    <h3>flex-box: initial</h3>
+    <div class="box box-6">
+        <div class="box-gen "></div>
+        <div class="box-gen "></div>
+        <div class="box-gen "></div>
+    </div>
+    <h3>flex-box: unset</h3>
+    <div class="box box-7">
+        <div class="box-gen "></div>
+        <div class="box-gen "></div>
+        <div class="box-gen "></div>
+    </div>
 
 
 
