--- a/calendario.html
+++ b/calendario.html
@@ -7,9 +7,11 @@
     <link rel="stylesheet" href="css/calendario.css">
 </head>
 <body>
-
+     
+    <div></div>    
+    <hr>
     <div class="contenedor">
-
+    
     <div class="box dia">Domingo</div>
     <div class="box dia">Lunes</div>
     <div class="box dia">Martes</div>
