--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <button class="button1" :active ><li><a href="NETFLIX.html" class="raya">NETFLIX</a></li></button>
         <button class="button1" :active ><li><a href="color.html"class="raya" >COLORES</a></li></button>
         <button class="button1" :active ><li><a href="listas.html"class="raya" >LISTAS</a></li></button>
-        <button class="button1" :active ><li><a href="Evaluacion_de_requisitos/requisitos.html" class="raya" >Evaluacion_de_requisitos</a></li></button>
+        <button class="button1" :active ><li><a href="Evaluacion_de_requisitos/requisitos.html" class="raya" >Evaluación_de_requisitos</a></li></button>
         <button class="button1" :active ><li><a href="margin.html" class="raya" >margen y borde</a></li></button>
         <button class="button1" :active ><li><a href="formulario.html" class="raya" >formulario</a></li></button>
         <button class="button1" :active ><li><a href="catalogo.html" class="raya" >catalogo</a></li></button>
@@ -39,6 +39,7 @@
         <button class="button1" :active ><li><a href="toglee.html" class="raya">toggle</a></li></button>
         <button class="button1" :active ><li><a href="flex-box.html" class="raya">flex-box</a></li></button>
         <button class="button1" :active ><li><a href="calendario.html" class="raya">calendario</a></li></button>
+        <button class="button1" :active ><li><a href="maquetacion.html" class="raya">maquetación</a></li></button>
       </center>
     </div>  
   </body>
