--- a/maquetacion-2.html
+++ b/maquetacion-2.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,9 +9,21 @@
 </head>
 <body>
     <div class="main-page">
-        <header>
+        <header class="barra">
             <div class="logo logo-img"><span class="style-text"></span></div>
-            <div class="main-menu"> <span class="style-text">menu principal</span></div>
+            <div class="main-menu"> 
+                <nav class="main-nav">
+                    <span  id="hamburguerMenu" class="hamburguer-Menu">&#9776</span>
+                    <ul id="mainMenu" class="menu2">
+                        <li class="item-style "><a href="#">Acerca de Nosotros</a></li>
+                        <li class="item-style "><a href="#">animales</a></li>
+                        <li class="item-style "><a href="#">rescates</a></li>
+                        <li class="item-style "><a href="#">contacto</a></li>
+                        
+                    </ul>
+                </nav>
+            </div>
+            
         </header>
 
         <div class="main-content">
@@ -65,5 +77,6 @@
             </div>
         </div>
     </div>
+    <script src="jc/maquetacion2.js"></script>
 </body>
 </html>
