--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
         <button class="button1" :active ><li><a href="flex-box.html" class="raya">flex-box</a></li></button>
         <button class="button1" :active ><li><a href="calendario.html" class="raya">calendario</a></li></button>
         <button class="button1" :active ><li><a href="maquetacion.html" class="raya">maquetación</a></li></button>
+        <button class="button1" :active ><li><a href="Carrito-compras.html" class="raya">Carrito de Compras</a></li></button>
       </center>
     </div>  
   </body>
