--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
         <button class="button1" :active ><li><a href="calendario.html" class="raya">calendario</a></li></button>
         <button class="button1" :active ><li><a href="maquetacion.html" class="raya">maquetación</a></li></button>
         <button class="button1" :active ><li><a href="Carrito-compras.html" class="raya">Carrito de Compras</a></li></button>
+        <button class="button1" :active ><li><a href="amazon.html" class="raya">Amazon</a></li></button>
+
       </center>
     </div>  
   </body>
