--- a/amazon.html
+++ b/amazon.html
@@ -10,6 +10,8 @@
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <title>Amazon</title>
     <link rel="stylesheet" href="css/amazon.css">
+    <link rel="shortcut icon" href="./css/img-amazon/amazon-logo-on-transparent-background-free-vector.jpg"
+        type="image/x-icon">
 </head>
 
 <body>
@@ -54,9 +56,9 @@
                 <div class="idioma">
                     <span class="txt-idioma">EN</span>
                     <div class="down-arrow">
-                       <i class='bx bxs-down-arrow'></i> 
+                        <i class='bx bxs-down-arrow'></i>
                     </div>
-                    
+
                 </div>
             </div>
         </div>
@@ -69,12 +71,68 @@
         </div>
         <div class="header-devoluciones">
             <span>Retums</span>
-                <span class="text-signin">& Orders</span>
+            <span class="text-signin">& Orders</span>
         </div>
         <div class="header-carrito">
-            <i class='bx bxs-cart-alt' ></i>
+            <i class='bx bxs-cart-alt'></i>
         </div>
+
+
     </header>
+    <div class="botones-inferiores">
+        <div class="botones-infe">
+
+            <span class="buton-hamburger-menu">
+                <i class='bx bx-menu'></i>
+            </span>
+
+            <span class="btn-text">
+                Todo
+            </span>
+            <span class="btn-text">
+                Ofertas del Día
+            </span>
+            <span class="btn-text">
+                Servicio al Cliente
+            </span>
+            <span class="btn-text">
+                Listas
+            </span>
+            <span class="btn-text">
+                Tarjetas de Regalo
+            </span>
+            <span class="btn-text">
+                Vender
+            </span>
+        </div>
+    </div>
+
+
+    <!-- Fin Header -->
+    <div id="mainContent" class="main-content">
+        <div class="box-modal">
+
+            <div class="modal">
+
+                <div class="btn-close"><i class='bx bx-x'></i></div>
+
+                <div class="box-img-modal">
+                    <img class="main-img-modal" src="css/img-amazon/pdto.png" alt="">
+                </div>
+
+                <div class="info-modal">
+                    <span class="txt-caracteristicas-modal">asdjasjdaksd</span>
+                    <span class=""></span>
+                </div>
+
+            </div>
+
+        </div>
+    </div>
+
+
+
+
 
     <script src="jc/amazon.js"></script>
 </body>
