--- a/amazon.html
+++ b/amazon.html
@@ -106,17 +106,43 @@
             </span>
         </div>
     </div>
+    <div class="volver-resultados">
+        <span><</span>
+                <a class="volver-res" href="#"><img src="/images/icons/back.svg" alt="" /> Volver a resultados</a>
+    </div>
+    <div class="contenido box-contenido-producto">
+
+        <div class="contenido box-contenido-img-muestra">
+
+        </div>
+        <div class="contenido box-contenido-img-grande">
+
+        </div>
+        <div class="contenido box-contenido-deescripcion">
+
+        </div>
+        <div class="contenido box-contenido-compra">
+
+        </div>
+
+    </div>
 
 
-    <!-- Fin Header -->
-    <div id="mainContent" class="main-content">
+
+    <!--///////////////////////// Fin Header///////////////////// -->
+
+
+
+
+    <!-- /////////////////desplegable///////////////////////////////// -->
+    <div id="mainContent" class="main-content ">
         <div class="box-modal">
 
             <div class="modal">
 
-                <div class="btn-close"><i class='bx bx-x'></i></div>
+                <div id="btnClose" class="btn-close"><i class='bx bx-x'></i></div>
 
-                <div class="box-img-modal">
+                <div id="imgModal" class="box-img-modal">
                     <img class="main-img-modal" src="css/img-amazon/pdto.png" alt="">
                 </div>
 
@@ -126,15 +152,21 @@
                     <span class="txt-sub-description-modal">Estilo:Thing</span>
                     <div class="box-modal-img">
 
-                        <div class="box-img-1 img"><img src="css/img-amazon/613EyhBpbtL._AC_SL1500_.png" alt=""></div>
-                        <div class="box-img-2 img"><img src="css/img-amazon/711ULQzrBXL._AC_SL1500_.png" alt=""></div>
-                        <div class="box-img-3 img"><img src="css/img-amazon/71tUuq+p44L._AC_SL1500_.png" alt=""></div>
-                        <div class="box-img-4 img"><img src="css/img-amazon/71uyW4EQZPL._AC_SL1500_.png" alt=""></div>
-                        <div class="box-img-5 img"><img src="css/img-amazon/81AfH38TsIL._AC_SL1500_.png" alt=""></div>
-                        <div class="box-img-6 img"><img src="css/img-amazon/pdto.png" alt=""></div>
-                        <div class="box-img-7 img"><img src="css/img-amazon/81AfH38TsIL._AC_SL1500_.png" alt=""></div>
-                        <div class="box-img-8 img"><img src="css/img-amazon/613EyhBpbtL._AC_SL1500_.png" alt=""></div>
-
+                        <div id="img1" class="box-img-1 img"><img src="css/img-amazon/613EyhBpbtL._AC_SL1500_.png"
+                                alt=""></div>
+                        <div id="img2" class="box-img-2 img"><img src="css/img-amazon/711ULQzrBXL._AC_SL1500_.png"
+                                alt=""></div>
+                        <div id="img3" class="box-img-3 img"><img src="css/img-amazon/71tUuq+p44L._AC_SL1500_.png"
+                                alt=""></div>
+                        <div id="img4" class="box-img-4 img"><img src="css/img-amazon/71uyW4EQZPL._AC_SL1500_.png"
+                                alt=""></div>
+                        <div id="img5" class="box-img-5 img"><img src="css/img-amazon/81AfH38TsIL._AC_SL1500_.png"
+                                alt=""></div>
+                        <div id="img6" class="box-img-6 img"><img src="css/img-amazon/pdto.png" alt=""></div>
+                        <div id="img7" class="box-img-7 img"><img src="css/img-amazon/81AfH38TsIL._AC_SL1500_.png"
+                                alt=""></div>
+                        <div id="img8" class="box-img-8 img"><img src="css/img-amazon/613EyhBpbtL._AC_SL1500_.png"
+                                alt=""></div>
                     </div>
                 </div>
 
@@ -143,6 +175,7 @@
 
         </div>
     </div>
+    <!-- fin del desplegable -->
 
 
 
