--- a/amazon.html
+++ b/amazon.html
@@ -85,25 +85,27 @@
             <span class="buton-hamburger-menu">
                 <i class='bx bx-menu'></i>
             </span>
+            <div class="btn-infe">
+                <span class="btn-text">
+                    Todo
+                </span>
+                <span class="btn-text">
+                    Ofertas del Día
+                </span>
+                <span class="btn-text">
+                    Servicio al Cliente
+                </span>
+                <span class="btn-text">
+                    Listas
+                </span>
+                <span class="btn-text">
+                    Tarjetas de Regalo
+                </span>
+                <span class="btn-text">
+                    Vender
+                </span>
+            </div>
 
-            <span class="btn-text">
-                Todo
-            </span>
-            <span class="btn-text">
-                Ofertas del Día
-            </span>
-            <span class="btn-text">
-                Servicio al Cliente
-            </span>
-            <span class="btn-text">
-                Listas
-            </span>
-            <span class="btn-text">
-                Tarjetas de Regalo
-            </span>
-            <span class="btn-text">
-                Vender
-            </span>
         </div>
     </div>
     <div class="volver-resultados">
@@ -142,15 +144,18 @@
 
                 <div id="btnClose" class="btn-close"><i class='bx bx-x'></i></div>
 
-                <div id="imgModal" class="box-img-modal">
-                    <img class="main-img-modal" src="css/img-amazon/pdto.png" alt="">
+                <div id="imgModal" class="img1 box-img-modal">
+                    <div class="img-principal">
+                        <img class="main-img-modal" src="css/img-amazon/pdto.png" alt="">
+                    </div>
+                    
                 </div>
 
                 <div class="info-modal">
                     <span class="txt-caracteristicas-modal">PJMarts Thing Hand Props Realistic Hand Ornament Creative
                         Figurine Home Decor Desktop Crafts Sculpture Decoration Life Size</span>
                     <span class="txt-sub-description-modal">Estilo:Thing</span>
-                    <div class="box-modal-img">
+                    <div id="boxContentImg" class="box-modal-img">
 
                         <div id="img1" class="box-img-1 img"><img src="css/img-amazon/613EyhBpbtL._AC_SL1500_.png"
                                 alt=""></div>
