--- a/amazon.html
+++ b/amazon.html
@@ -121,9 +121,19 @@
                 </div>
 
                 <div class="info-modal">
-                    <span class="txt-caracteristicas-modal">asdjasjdaksd</span>
-                    <span class=""></span>
+                    <span class="txt-caracteristicas-modal">PJMarts Thing Hand Props Realistic Hand Ornament Creative Figurine Home Decor Desktop Crafts Sculpture Decoration Life Size</span>
+                    <span class="txt-sub-description-modal">Estilo:Thing</span>
+                    <div class="box-modal-img">
+                        <div class="box-img-1 img"></div>
+                        <div class="box-img-2 img"></div>
+                        <div class="box-img-3 img"></div>
+                        <div class="box-img-4 img"></div>
+                        <div class="box-img-5 img"></div>
+                        <div class="box-img-6 img"></div>
+                        <div class="box-img-7 img"></div>
+                    </div>
                 </div>
+
 
             </div>
 
