--- a/amazon.html
+++ b/amazon.html
@@ -124,13 +124,14 @@
                     <span class="txt-caracteristicas-modal">PJMarts Thing Hand Props Realistic Hand Ornament Creative Figurine Home Decor Desktop Crafts Sculpture Decoration Life Size</span>
                     <span class="txt-sub-description-modal">Estilo:Thing</span>
                     <div class="box-modal-img">
-                        <div class="box-img-1 img"></div>
-                        <div class="box-img-2 img"></div>
-                        <div class="box-img-3 img"></div>
-                        <div class="box-img-4 img"></div>
-                        <div class="box-img-5 img"></div>
-                        <div class="box-img-6 img"></div>
-                        <div class="box-img-7 img"></div>
+                        <div class="box-img-1 img"><img src="css/img-amazon/613EyhBpbtL._AC_SL1500_.png" alt=""></div>
+                        <div class="box-img-2 img"><img src="css/img-amazon/711ULQzrBXL._AC_SL1500_.png" alt=""></div>
+                        <div class="box-img-3 img"><img src="css/img-amazon/71tUuq+p44L._AC_SL1500_.png" alt=""></div>
+                        <div class="box-img-4 img"><img src="css/img-amazon/71uyW4EQZPL._AC_SL1500_.png" alt=""></div>
+                        <div class="box-img-5 img"><img src="css/img-amazon/81AfH38TsIL._AC_SL1500_.png" alt=""></div>
+                        <div class="box-img-6 img"><img src="css/img-amazon/pdto.png" alt=""></div>
+                        <div class="box-img-7 img"><img src="css/img-amazon/81AfH38TsIL._AC_SL1500_.png" alt=""></div>
+                        <div class="box-img-8 img"><img src="css/img-amazon/613EyhBpbtL._AC_SL1500_.png" alt=""></div>
                     </div>
                 </div>
 
