--- a/amazon.html
+++ b/amazon.html
@@ -162,9 +162,20 @@
         <div class="contenido box-contenido-deescripcion">
            
                 <div class="box-seccion-1 seccion">
-                   <span>WPOZD Adams Hand, Adams - Decoración para el hogar para cosplay, regalo de decoración aterradora para fanáticos, regalo para niños y niñas</span>
-                <div class=""></div>
-                <div class=""></div>
+                   <div class="txt-seccion">
+                    <span>WPOZD Adams Hand, Adams - Decoración para el hogar para cosplay, regalo de decoración aterradora para fanáticos, regalo para niños y niñas</span>
+                    </div>
+                <div class="txt-marca-seccion">
+                    <a class="txt-marca" href="">Marca: WPOZD</a>
+                </div>
+                <div class="estrellas-section">
+                    <span id="puntuacion"> 0 </span>
+                    <div class="estrella"> <i id="star1"  class=' bx bx-star '></i></div>
+                    <div class="estrella"><i  id="star2" class=' bx bx-star '></i></div>
+                    <div class="estrella"><i  id="star3" class=' bx bx-star '></i></div>
+                    <div class="estrella"><i  id="star4" class=' bx bx-star '></i></div>
+                    <div class="estrella"><i  id="star5" class=' bx bx-star '></i></div>
+                </div>
                 <div class=""></div>
                 <div class=""></div>
                 <div class=""></div>                
@@ -199,7 +210,7 @@
 
 
     <!-- /////////////////desplegable///////////////////////////////// -->
-    <div id="mainContent" class="main-content ">
+    <div id="mainContent" class="main-content">
         <div class="box-modal">
 
             <div class="modal">
