--- a/amazon.html
+++ b/amazon.html
@@ -115,7 +115,14 @@
     <div class="contenido box-contenido-producto">
 
         <div class="contenido box-contenido-img-muestra">
-
+            <div class="box-imagen-muestra muestra-1"><img src="css/img-amazon/613EyhBpbtL._AC_SL1500_.png" alt=""></div>
+            <div class="box-imagen-muestra muestra-2"><img src="" alt=""></div>
+            <div class="box-imagen-muestra muestra-3"><img src="" alt=""></div>
+            <div class="box-imagen-muestra muestra-4"><img src="" alt=""></div>
+            <div class="box-imagen-muestra muestra-5"><img src="" alt=""></div>
+            <div class="box-imagen-muestra muestra-6"><img src="" alt=""></div>
+            <div class="box-imagen-muestra muestra-7"><img src="" alt=""></div>
+            <div class="box-imagen-muestra muestra-8"><img src="" alt=""></div>
         </div>
         <div class="contenido box-contenido-img-grande">
 
